Added html,head and body tags. Added bootstrap, style, Jquery and script links.

--- a/dice.html
+++ b/dice.html
@@ -2,9 +2,14 @@
 <html>
 
 <head>
-  <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-  <link href="css/styles.css" rel="stylesheet" type="text/css">
-  <script src="JS/jQuery.js"></script>
+  <link href="CSS/bootstrap.css" rel="stylesheet" type="text/css">
+  <link href="CSS/styles.css" rel="stylesheet" type="text/css">
+  <script src="JS/Jquery.js"></script>
   <script src="JS/scripts.js"></script>
   <title>Pig dice</title>
 </head>
+
+<body>
+  
+</body>
+</html>
