--- a/dice.html
+++ b/dice.html
@@ -10,6 +10,17 @@
 </head>
 
 <body>
-  
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4 live-content" id="content1">
+        <h1>Player 1</h1>
+        <button class="bg-success" id="roll-dice1" onclick="">Roll</button>
+        <button class="bg-warning" id="hold1" onclick="">Hold</button>
+        <h2 id="roll1">0</h2>
+        <h2 id="score1">0</h2>
+        <h2 id="final-score1"></h2>
+        <!-- <h3></h3> -->
+        <h4 class="cumulative"></h4>
+      </div>
 </body>
 </html>
