added player two details

--- a/dice.html
+++ b/dice.html
@@ -22,5 +22,18 @@
         <!-- <h3></h3> -->
         <h4 class="cumulative"></h4>
       </div>
+      <div class="col-md-4" id="content2">
+        <h1>Player 2</h1>
+        <button class="bg-success" id="roll-dice2" onclick="">Roll</button>
+        <button class="bg-warning" id="hold2" onclick="">Hold</button>
+        <h2 id="roll2">0</h2>
+        <h2 id="score2">0</h2>
+        <h2 id="final-score2"></h2>
+
+        <!-- <h3></h3> -->
+        <h4 class="cumulative"></h4>
+      </div>
+    </div>
+
 </body>
 </html>
