Added title of the game

--- a/dice.html
+++ b/dice.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+  <h1 class="text-center" PIG DICE GAME</h1>
   <div class="container">
     <div class="row">
       <div class="col-md-4 live-content" id="content1">
