added the names of each score

--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 </head>
 
 <body>
-  <h1 class="text-center" PIG DICE GAME</h1>
+  <h1 class="text-center"> PIG DICE GAME</h1>
   <div class="container">
     <div class="row">
       <div class="col-md-4 live-content" id="content1">
         <h1>Player 1</h1>
         <button class="bg-success" id="roll-dice1" onclick="">Roll</button>
         <button class="bg-warning" id="hold1" onclick="">Hold</button>
-        <h2 id="roll1">0</h2>
-        <h2 id="score1">0</h2>
-        <h2 id="final-score1"></h2>
+        <h2 id="roll1">Current: 0</h2>
+        <h2 id="score1">Score: 0</h2>
+        <h2 id="final-score1">Final score: </h2>
         <!-- <h3></h3> -->
         <h4 class="cumulative"></h4>
       </div>
@@ -27,9 +27,9 @@
         <h1>Player 2</h1>
         <button class="bg-success" id="roll-dice2" onclick="">Roll</button>
         <button class="bg-warning" id="hold2" onclick="">Hold</button>
-        <h2 id="roll2">0</h2>
-        <h2 id="score2">0</h2>
-        <h2 id="final-score2"></h2>
+        <h2 id="roll2">Current: 0</h2>
+        <h2 id="score2">Score: 0</h2>
+        <h2 id="final-score2">Final score: </h2>
 
         <!-- <h3></h3> -->
         <h4 class="cumulative"></h4>
